corrected typing error

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-nQA - Question and Answer system bilt with ASP.NET MVC 4, Razor, C#, nHibernate, fluentNHibernate
+nQA - Question and Answer system built with ASP.NET MVC 4, Razor, C#, nHibernate, fluentNHibernate
